# cpplibs_starter_basic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_cmake_vs2019.cmd  build_linux.sh
demo/: CMakeLists.txt  demo_main.cpp  golink.cpp  golink.h
